fix z-index

--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ nav{
     top: 0;
     left: 0;
     right: 0;
-   z-index: 1;
+    z-index: 3;
    
 }
 button{
@@ -182,7 +182,7 @@ main{
     font-size: 3.5rem;
     text-shadow: 2px 2px 8px #000;
     position: relative;
-    z-index: 1;
+    z-index: 2;
 
 }
 .ventures{
@@ -194,7 +194,8 @@ main{
     padding-left: 110px;
     position: relative;
     top: 20px;
-    left: -30px
+    left: -30px;
+    z-index: 1;
 }
 
 
